Delete row when a delete cell is clicked. Background color turns red when user hovers over delete cell

--- a/src/main/resources/org/example/taskmanagementsystem/styles/stylesheet.css
+++ b/src/main/resources/org/example/taskmanagementsystem/styles/stylesheet.css
@@ -160,3 +160,11 @@
 .minor:odd:selected{
     -fx-background-color: rgb(153, 153, 8);
 }
+
+.delete-cell:hover{
+    -fx-background-color: rgb(232, 67, 67);
+}
+
+.delete-cell:odd:hover{
+    -fx-background-color: rgb(232, 67, 67);
+}
