--- a/src/main/resources/org/example/taskmanagementsystem/styles/mainStyle.css
+++ b/src/main/resources/org/example/taskmanagementsystem/styles/mainStyle.css
@@ -1,3 +1,11 @@
+.root{
+    -fx-background-color: rgb(32, 33, 45);
+}
+
+.header{
+    -fx-background-color: rgb(45, 45, 55);
+}
+
 .addButton{
     -fx-background-color: rgb(98, 94, 192);
     -fx-text-fill: white;
